--- a/public/2.index.html
+++ b/public/2.index.html
@@ -9,6 +9,10 @@
 </head>
 
 <body>
+    <div id="app">
+        <div>{{name}}</div>
+        <span>{{age}}</span>
+    </div>
     <script src="/dist/umd/vue.js"></script>
     <script>
         let vm = new Vue({
@@ -17,11 +21,13 @@
                 return {
                     name: 'zf',
                     age: 11,
-                    address: { number: 0, name: 'xxx' },
+                    address: { number: 30, name: 'xxx' },
                     arr: ['a', 'b', 'c', { a: 1 }]
                 }
             }
-        })
+        });
+        // 1. 模板引擎 性能差 需要正則匹配替換 1.0的時候沒有引入虛擬DOM的改變
+        // 2. 採用虛擬DOM，數據變化後比較虛擬DOM的差異 最後更新需要更新的地方
     </script>
 </body>
 
