--- a/public/2.index.html
+++ b/public/2.index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    <div id="app">
-        <div>{{name}}</div>
+    <div id="app" style="color:red;background:yellow">
+        <div style="color:red;">{{ name }} hello {{age}}hello</div>
         <span>{{age}}</span>
     </div>
     <script src="/dist/umd/vue.js"></script>
